[package]
name = "kitn_python"
version = "0.0.0"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "The Python bindings for KitN: a creation kit for novel retro apps"
readme = "../README.md"
repository = "https://github.com/kitao/kitn"
license = "MIT"
keywords = ["audio", "gamedev", "graphics", "gui", "python"]
categories = ["api-bindings", "game-development", "graphics", "gui", "multimedia"]

[dependencies]
kitn = { path = "../kitn" }
pyo3 = { version = "0.20", features = ["abi3-py37", "extension-module"] }
