[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kitn"
version = "0.0.0"
requires-python = ">=3.7"
authors = [{ name = "Takashi Kitao", email = "takashi.kitao@gmail.com" }]
description = "The Python bindings for KitN: a creation kit for novel retro apps"
readme = "../README.md"
license = { file = "../LICENSE" }
keywords = ["audio", "game", "gamedev", "graphics", "gui"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/kitao/kitn"
Repository = "https://github.com/kitao/kitn.git"
Changelog = "https://github.com/kitao/kitn/blob/main/CHANGELOG.md"

[tool.maturin]
python-source = "python"
module-name = "kitn.kitn_python"
