[package]
name = "kitn"
version = "0.0.0"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "KitN: a creation kit for novel retro apps"
readme = "../README.md"
repository = "https://github.com/kitao/kitn"
license = "MIT"
keywords = ["audio", "game", "gamedev", "graphics", "gui"]
categories = ["embedded", "game-development", "graphics", "gui", "multimedia"]

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.1.3"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
